--- a/vasco-campeao.html
+++ b/vasco-campeao.html
@@ -15,6 +15,9 @@
     </nav>
 
     <h1>Vasco conquista a terceira Libertadores seguida!</h1>
-    <p>Em uma noite mágica no Maracanã, o Vasco da Gama se sagrou tricampeão consecutivo da Copa Libertadores da América. O time superou o Boca Juniors por 2 a 0, com gols de Vegetti e Payet. A torcida vascaína celebra mais um capítulo histórico do clube cruzmaltino.</p>
+    
+    <p>Em uma noite mágica no Maracanã, o Vasco da Gama se sagrou tricampeão consecutivo da Copa Libertadores da América. O time superou o Boca Juniors por 2 a 0, com gols de Caça rato e Cristiano Ronaldo. A torcida vascaína celebra mais um capítulo histórico do clube cruzmaltino.</p>
+     <h3><a href="escalacao.html">VEJA A ESCALAÇÃO USADA PELA EQUIPE PARA CONQUISTAR A VITÓRIA!</a></h3>
 </body>
+    
 </html>
