--- a/escalacao.html
+++ b/escalacao.html
@@ -15,7 +15,7 @@
     </nav>
 
     <h1>Escalação Titular do Vasco</h1>
-    <iframe src="https://github.com/GustavoUEG/Trabalho/blob/main/Escala%C3%A7%C3%A3o%20de%20Futebol%20Engra%C3%A7ada%20Verde%20Post%20para%20Instagram.pdf" width="100%" height="600px"></iframe>
+    <iframe src="https://github.com/GustavoUEG/Trabalho/blob/main/Escala%C3%A7%C3%A3o%20de%20Futebol%20Engra%C3%A7ada%20Verde%20Post%20para%20Instagram.jpg" width="100%" height="600px"></iframe>
 
     <p><a href="reservas.html">Ver escalação de reservas</a></p>
 </body>
