--- a/escalacao.html
+++ b/escalacao.html
@@ -15,7 +15,7 @@
     </nav>
 
     <h1>Escalação Titular do Vasco</h1>
-    <div src="Escalação de Futebol Engraçada Verde Post para Instagram.jpg" width="auto" height="auto"></div>
+    <div src="Escalação de Futebol Engraçada Verde Post para Instagram.jpg" ></div>
 
     <p><a href="reservas.html">Ver escalação de reservas</a></p>
 </body>
