--- a/escalacao.html
+++ b/escalacao.html
@@ -15,7 +15,8 @@
     </nav>
 
     <h1>Escalação Titular do Vasco</h1>
-    <img src="Escalação de Futebol Engraçada Verde Post para Instagram.jpg" width="100%" height="600px"> 
+    
+    <iframe src="Escalação de Futebol Engraçada Verde Post para Instagram.jpg" width="100%" height="600px"></iframe>
 
     <p><a href="reservas.html">Ver escalação de reservas</a></p>
 </body>
