--- a/escalacao.html
+++ b/escalacao.html
@@ -16,7 +16,7 @@
 
     <h1>Escalação Titular do Vasco</h1>
     
-    <iframe src="Escalação de Futebol Engraçada Verde Post para Instagram.jpg" width="100%" height="1080px"></iframe>
+    <iframe src="Escalação de Futebol Engraçada Verde Post para Instagram.jpg" width="1080px" height="1080px"></iframe>
 
     <p><a href="reservas.html">Ver escalação de reservas</a></p>
 </body>
