--- a/escalacao.html
+++ b/escalacao.html
@@ -18,6 +18,6 @@
     
     <iframe src="Escalação de Futebol Engraçada Verde Post para Instagram.jpg" width="1080px" height="1080px"></iframe>
 
-    <p><a href="reservas.html">Ver escalação de reservas</a></p>
+    <p><a href="reservas.html">VEJA A ESCALAÇÃO DOS RESERVAS DA SELEÇÃO VASCAINA</a></p>
 </body>
 </html>
