--- a/reservas.html
+++ b/reservas.html
@@ -14,6 +14,6 @@
     </nav>
 
     <h1>Escalação de Reservas do Vasco</h1>
-    <iframe src="Escalação de Futebol Engraçada Verde Post para Instagram (1).pdf" width="100%" height="600px"></iframe>
+    <iframe src="Escalação de Futebol Engraçada Verde Post para Instagram (1).jpg" width="1080px" height="1080px"></iframe>
 </body>
 </html>
