--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
             
         </article>
     </section>
+    <h2>SUPREMO DECIDE QUE GOLEIRO BRUNO DEVE VOLTAR PARA A CADEIA</h2>
+    <p>Bruno Fernandes foi solto no dia 21 de fevereiro. Ministro relator entendeu que a decisão do júri em Minas é soberana e votou contra a liminar.</p>
+    <img src"">
 </body>
 </html>
