--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </section>
     <h2>SUPREMO DECIDE QUE GOLEIRO BRUNO DEVE VOLTAR PARA A CADEIA</h2>
     <p>Bruno Fernandes foi solto no dia 21 de fevereiro. Ministro relator entendeu que a decisão do júri em Minas é soberana e votou contra a liminar.</p>
-    <img src"">
+    <img src "Captura de tela de 2025-04-24 21-26-58.png">
 </body>
 </html>
