--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </section>
     <h2>SUPREMO DECIDE QUE GOLEIRO BRUNO DEVE VOLTAR PARA A CADEIA</h2>
     <p>Bruno Fernandes foi solto no dia 21 de fevereiro. Ministro relator entendeu que a decisão do júri em Minas é soberana e votou contra a liminar.</p>
-    <inframe src="Captura de tela de 2025-04-24 21-26-58.png" width="1080px" height="1080px"></inframe>
+    <inframe src="https://github.com/GustavoUEG/Trabalho/blob/main/Captura%20de%20tela%20de%202025-04-24%2021-26-58.png" width="1080px" height="1080px"></inframe>
 </body>
 </html>
