--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <h2>SUPREMO DECIDE QUE GOLEIRO BRUNO DEVE VOLTAR PARA A CADEIA</h2>
     <p>Bruno Fernandes foi solto no dia 21 de fevereiro. Ministro relator entendeu que a decisão do júri em Minas é soberana e votou contra a liminar.</p>
     <a src="">SAIBA MAIS SOBRE A NOTÍCIA</a>
-    <div> <img src""</div>
+    <div> <img src="Captura de tela de 2025-04-24 21-26-58.png"</div>
 </body>
 </html>
