--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
     <h2>SUPREMO DECIDE QUE GOLEIRO BRUNO DEVE VOLTAR PARA A CADEIA</h2>
     <p>Bruno Fernandes foi solto no dia 21 de fevereiro. Ministro relator entendeu que a decisão do júri em Minas é soberana e votou contra a liminar.</p>
-    <a src="">SAIBA MAIS SOBRE A NOTÍCIA</a>
+    <a href="">SAIBA MAIS SOBRE A NOTÍCIA</a>
     <div> <img src="Captura de tela de 2025-04-24 21-26-58.png"</div>
 </body>
 </html>
