--- a/esportes.html
+++ b/esportes.html
@@ -14,13 +14,9 @@
         <a href="contato.html">Contato</a>
     </nav>
 
-    <h1>Esportes</h1>
-    <ul>
-        <li>Futebol</li>
-        <li>Basquete</li>
-        <li>Vôlei</li>
-        <li>Fórmula 1</li>
-        <li>Outros</li>
-    </ul>
+    <h1>Com um a menos, Corinthians vence Racing e segue vivo na Sul-Americana</h1>
+    <p>Ángel Romero fez o gol da vitória do Timão </p>
+    <a href="https://www.cnnbrasil.com.br/esportes/futebol/futebol-internacional/sulamericana/com-um-a-menos-corinthians-vence-racing-e-segue-vivo-na-sul-americana/"> </a>
+  
 </body>
 </html>
