--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </article>
     </section>
     <h1 >NOTÍCIAS BOMBÁSTICAS</h1>
-    <h2>SUPREMO DECIDE QUE GOLEIRO BRUNO DEVE VOLTAR PARA A CADEIA</h2>
+    <h2 style="color: red;">SUPREMO DECIDE QUE GOLEIRO BRUNO DEVE VOLTAR PARA A CADEIA</h2>
     <p>Bruno Fernandes foi solto no dia 21 de fevereiro. Ministro relator entendeu que a decisão do júri em Minas é soberana e votou contra a liminar.</p>
     
     <inframe src="Captura de tela de 2025-04-24 21-26-58.png" width="100%" height="600px"></inframe>
