--- a/esportes.html
+++ b/esportes.html
@@ -16,7 +16,7 @@
 
     <h1>Com um a menos, Corinthians vence Racing e segue vivo na Sul-Americana</h1>
     <p>Ángel Romero fez o gol da vitória do Timão </p>
-    <a href="https://www.cnnbrasil.com.br/esportes/futebol/futebol-internacional/sulamericana/com-um-a-menos-corinthians-vence-racing-e-segue-vivo-na-sul-americana/"> </a>
+    <a href="https://www.cnnbrasil.com.br/esportes/futebol/futebol-internacional/sulamericana/com-um-a-menos-corinthians-vence-racing-e-segue-vivo-na-sul-americana/">SAIBA MAIS SOBRE A NOTÍCIA</a>
   
 </body>
 </html>
