--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <h2>Últimas Notícias</h2>
         <article>
             <h3><a href="vasco-campeao.html">Vasco conquista a terceira Libertadores seguida!</a></h3>
-            <p>O clube carioca faz história com o tricampeonato consecutivo da competição sul-americana.</p>
+            <img src="ChatGPT Image 25 de abr. de 2025, 14_05_18.png" alt="VASCO CAMPEÃO"
+            <p> O clube carioca faz história com o tricampeonato consecutivo da competição sul-americana.</p>
             
         </article>
     </section>
