--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>Últimas Notícias</h2>
         <article>
             <h3><a href="vasco-campeao.html">Vasco conquista a terceira Libertadores seguida!</a></h3>
-            <img src="ChatGPT Image 25 de abr. de 2025, 14_05_18.png" alt="VASCO CAMPEÃO"
+            <img src="ChatGPT Image 25 de abr. de 2025, 14_05_18.png" alt="VASCO CAMPEÃO">
             <p> O clube carioca faz história com o tricampeonato consecutivo da competição sul-americana.</p>
             
         </article>
