--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 
     <h1>Bem-vindo ao Portal de Notícias Esportivas</h1>
     <section>
-        <h2>Últimas Notícias</h2>
+       <div class="vasco"><h2>Últimas Notícias</h2>
         <article>
             <h3><a href="vasco-campeao.html">Vasco conquista a terceira Libertadores seguida!</a></h3>
             <img src="ChatGPT Image 25 de abr. de 2025, 14_05_18.png" alt="VASCO CAMPEÃO">
             <p> O clube carioca faz história com o tricampeonato consecutivo da competição sul-americana.</p>
             
         </article>
+           </div> 
     </section>
     <h1 >NOTÍCIAS BOMBÁSTICAS</h1>
     <h2 style="color: red;">SUPREMO DECIDE QUE GOLEIRO BRUNO DEVE VOLTAR PARA A CADEIA</h2>
